Fixed bug which tools values were not being saved

--- a/src/view/pages/values.html
+++ b/src/view/pages/values.html
@@ -47,8 +47,7 @@
                             <span class="mt-2 ml-2">Brush size:</span>
                         </div>
                         <div class="col">
-                            <label for="brushSizeRange" class="form-label">Brush size: <span
-                                    id="brushSizeSpan"></span>px</label>
+                            <label for="brushSizeRange" class="form-label">Brush size: <span id="brushSizeSpan"></span>px</label>
                             <input type="range" class="form-range" min="1" max="10" id="brushSizeRange" valueRange>
                         </div>
                     </div>
