Added the image page and its logic

--- a/src/view/assets/sass/index.scss
+++ b/src/view/assets/sass/index.scss
@@ -6,4 +6,5 @@
 
 @import "./navbar.scss";
 @import "./pages.scss";
-@import "./pages/values.scss"
+@import "./pages/values.scss";
+@import "./pages/image.scss";
