--- a/src/view/index.html
+++ b/src/view/index.html
@@ -27,6 +27,7 @@
                         <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="#" rPage="#./pages/coordinates.html">Coordinates</a></li>
                             <li><a class="dropdown-item" href="#" rPage="#./pages/values.html">Values</a></li>
+                            <li><a class="dropdown-item" href="#" rPage="#./pages/image.html">Image</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
