--- a/src/view/pages/welcome.html
+++ b/src/view/pages/welcome.html
@@ -5,5 +5,6 @@
     <section class="d-flex flex-column align-items-center">
         <div id="drawer-coordinates-status"></div>
         <div id="drawer-values-status"></div>
+        <div id="drawer-image-status"></div>
     </section>
 </div>
