Cursor XY pos is now shoing on "coordinates"

--- a/src/view/pages/coordinates.html
+++ b/src/view/pages/coordinates.html
@@ -268,8 +268,8 @@
                 <aside class=" col col-sm-2">
                     <!-- Cursor current position -->
                     <h3>Current cursor position</h3>
-                    <p>x: <span coordinateDiv id="xCursorPos"></span></p>
-                    <p>y: <span coordinateDiv id="yCursorPos"></span></p>
+                    <p>x: <span id="xCursorPos"></span></p>
+                    <p>y: <span id="yCursorPos"></span></p>
                 </aside>
             </div>
         </div>
