Drawer is now working

--- a/src/view/pages/draw.html
+++ b/src/view/pages/draw.html
@@ -6,7 +6,8 @@
     </div>
     <div class="d-flex flex-column align-items-center mt-5" id="drawer">
         <p>Once you click the button below, you'll need to maximize Paint 3D. </p>
-        <p><span class="fw-bold">Observation:</span> currently, the Autodrawer doesn't have a hotkey to stop the process</p>
-        <button class="btn btn-warning" id="draw-button">Draw!</button> <!-- TODO: Button logic -->
+        <p><span class="fw-bold">Observation:</span> currently, the Autodrawer doesn't have a hotkey to stop the process.</p>
+        <button class="btn btn-warning mt-4" id="draw-button">Draw!</button>
+        <div class="fs-3" id="drawer-count"></div>
     </div>
 </div>
