--- a/src/view/assets/sass/pages/help.scss
+++ b/src/view/assets/sass/pages/help.scss
@@ -15,10 +15,10 @@
     font-style: italic;
 }
 
-a[scrollable] {
+a.scrollable {
     color: $cyan;
 }
 
-a[scrollable]:focus {
+a.scrollable:focus {
     color: $blue;
 }
