--- a/src/view/pages/help.html
+++ b/src/view/pages/help.html
@@ -10,22 +10,23 @@
         <h2>Contents:</h2>
         <div id="toc">
             <ul>
-                <li><a href="#coordinates" scrollable>Settings: coordinates</a></li>
+                <li><a href="#coordinates" class="scrollable">Settings: coordinates</a></li>
                 <ul>
-                    <li><a href="#tools" scrollable>Tools</a></li>
-                    <li><a href="#values" scrollable>Values</a></li>
-                    <li><a href="#color-selector" scrollable>Color Selector</a></li>
-                    <li><a href="#canvas" scrollable>Canvas</a></li>
-                    <li><a href="#context-menu" scrollable>Context Menu | Redefine Canvas</a></li>
+                    <li><a href="#tools" class="scrollable">Tools</a></li>
+                    <li><a href="#values" class="scrollable">Values</a></li>
+                    <li><a href="#color-selector" class="scrollable">Color Selector</a></li>
+                    <li><a href="#canvas" class="scrollable">Canvas</a></li>
+                    <li><a href="#context-menu" class="scrollable">Context Menu | Redefine Canvas</a></li>
                 </ul>
-                <li><a href="#settings-values" scrollable>Settings: values</a></li>
-                <li><a href="#settings-image" scrollable>Settings: image</a></li>
+                <li><a href="#settings-values" class="scrollable">Settings: values</a></li>
+                <li><a href="#settings-image" class="scrollable">Settings: image</a></li>
+                <li><a href="#faq" class="scrollable">FAQ</a></li>
             </ul>
         </div>
     </section>
     <section>
         <h2 id="coordinates">Settings: coordinates</h2>
-        <p>Every coordinate - <a href="#context-menu" scrollable>but one</a> - corresponds to an absolute XY point on your monitor.
+        <p>Every coordinate - <a href="#context-menu" class="scrollable">but one</a> - corresponds to an absolute XY point on your monitor.
             These coordinates will be used previously and during the drawing process.
             The locations to get the coordinates are listed below:</p>
         <article class="my-4" id="tools">
@@ -109,10 +110,25 @@
         </ul>
         <hr>
     </section>
-    <section class="mb-5">
+    <section>
         <h2 id="settings-image">Settings: image</h2>
         <p>A image is necessary for the drawer to start drawing <em>(obviously)</em>. This image cannot be greater than
             canvas' size.
             Canvas size is calculated by its subtracting the axes.</p>
+        <hr>
+    </section>
+    <section class="mb-5">
+        <h2 class="mb-4" id="faq">FAQ:</h2>
+        <ul>
+            <li>There is a red &quot;X&quot; right beside some coordinate at the Coordinates Page, what does that mean?</li>
+            <ul>
+                <li>It means that the coordinate is invalid. Things that make a coordinate invalid: X or Y are blank; Some
+                    coordinate is not numeric only; A negative value; A value greater than your resolution (example: inserting a X value of 1921 while your monitor's width is 1920).</li>
+            </ul>
+            <li>&quot;Image size is greater than Canvas size&quot;. How do I solve it?</li>
+            <ul>
+                <li>You will need to resize either your canvas (at the Coordinates page) or your image</li>
+            </ul>
+        </ul>
     </section>
 </div>
