--- a/src/view/pages/help.html
+++ b/src/view/pages/help.html
@@ -31,7 +31,7 @@
             The locations to get the coordinates are listed below:</p>
         <article class="my-4" id="tools">
             <h3>Tools:</h3>
-            <p><em>Paint 3D's tools are located at the top right corner. The tools listed below are
+            <p><em>Paint 3D's tools are located in the top right corner. The tools listed below are
                     exemplified on the image.</em></p>
             <ol>
                 <li>Marker</li>
@@ -56,12 +56,12 @@
             </ol>
             <div class="img-wrapper">
                 <img src="../assets/img/boxes.png" alt="">
-                <p>The points are located at the right side.</p>
+                <p>The points are located on the right side.</p>
             </div>
         </article>
         <article class="my-4" id="color-selector">
             <h3>Color Selector:</h3>
-            <p>When you left click on the <em>Selected Color Preview</em>, a Color Selector will open. The coordinates
+            <p>When you left-click on the <em>Selected Color Preview</em>, a Color Selector will open. The coordinates
                 must be taken based on the example image</p>
             <ol>
                 <li>Red value</li>
@@ -87,8 +87,8 @@
         </article>
         <article class="my-4" id="context-menu">
             <h3>Context Menu | Redefine Canvas</h3>
-            <p>When you right click on canvas, a context menu will open. The coordinate is taken from the point where
-                you right click on canvas plus the XY amount used to move your cursor to the option.</p>
+            <p>When you right-click on canvas, a context menu will open. The coordinate is taken from the point where
+                you right-click on canvas plus the XY amount used to move your cursor to the option.</p>
             <p>Observation: this is the <strong>ONLY</strong> relative coordinate in the whole settings.</p>
             <div class="img-wrapper">
                 <img src="../assets/img/contextbox.png" alt="">
@@ -100,7 +100,7 @@
     <section>
         <h2 id="settings-values">Settings: values</h2>
         <p>The values below are going to be used by the drawer to set Paint 3D's tools and values. These settings are
-            pretty much self explanatory:</p>
+            pretty much self-explanatory:</p>
         <ul>
             <li>Zoom: amount of zoom that will be set.</li>
             <li>Brush size: thickness in pixels of the tool. Each tool has a different thickness min and max amount.
@@ -123,7 +123,7 @@
             <li>There is a red &quot;X&quot; right beside some coordinate at the Coordinates Page, what does that mean?</li>
             <ul>
                 <li>It means that the coordinate is invalid. Things that make a coordinate invalid: X or Y are blank; Some
-                    coordinate is not numeric only; A negative value; A value greater than your resolution (example: inserting a X value of 1921 while your monitor's width is 1920).</li>
+                    coordinate is not numeric only; A negative value; A value greater than your resolution (example: inserting an X value of 1921 while your monitor's width is 1920).</li>
             </ul>
             <li>&quot;Image size is greater than Canvas size&quot;. How do I solve it?</li>
             <ul>
