Added a footer to "Welcome"

--- a/src/view/pages/welcome.html
+++ b/src/view/pages/welcome.html
@@ -1,10 +1,15 @@
-<div class="d-flex flex-column flex-grow-1 justify-content-center align-items-center fadein-text duration-1s">
-    <header>
-        <h1 class="fw-bold fs-huge mb-5-ni">2flps' Autodrawer:</h1>
-    </header>
-    <section class="d-flex flex-column align-items-center">
-        <div id="drawer-coordinates-status"></div>
-        <div id="drawer-values-status"></div>
-        <div id="drawer-image-status"></div>
-    </section>
+<div class="d-flex flex-column flex-grow-1">
+    <div class="d-flex flex-column flex-grow-1 justify-content-center align-items-center fadein-text duration-1s">
+        <header>
+            <h1 class="fw-bold fs-huge mb-5-ni">2flps' Autodrawer:</h1>
+        </header>
+        <section class="d-flex flex-column align-items-center">
+            <div id="drawer-coordinates-status"></div>
+            <div id="drawer-values-status"></div>
+            <div id="drawer-image-status"></div>
+        </section>
+    </div>
+    <footer class="d-flex justify-content-center">
+        <p>Developed by <a href="https://github.com/FelipeFlohr" externalAnchor>Felipe Matheus Flohr</a> | <a href="https://github.com/FelipeFlohr/electron-autodrawer" externalAnchor>This Repo on GitHub</a></p>
+    </footer>
 </div>
