Added README and grammar fix

--- a/src/view/pages/help.html
+++ b/src/view/pages/help.html
@@ -112,7 +112,7 @@
     </section>
     <section>
         <h2 id="settings-image">Settings: image</h2>
-        <p>A image is necessary for the drawer to start drawing <em>(obviously)</em>. This image cannot be greater than
+        <p>An image is necessary for the drawer to start drawing <em>(obviously)</em>. This image cannot be greater than
             canvas' size.
             Canvas size is calculated by its subtracting the axes.</p>
         <hr>
